<resources>
    <string name="app_name">SimpleClass</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start">现在开始</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="linkToAcademic">连接到教务处系统</string>
    <string name="ID">学号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="enterCorrectAccount">请输入正确的用户名</string>
    <string name="enterCorrectPassword">请输入正确的密码</string>
    <string name="linkToAcademicError">连接到服务器时遇到问题</string>
    <string name="accountOrPasswordError">用户名或密码错误</string>
    <string name="loginSuccessfully">登陆成功</string>
    <string name="processingClass_PleaseWait">正在读取课程，请稍侯</string>
    <string name="errorInReadClass_PleaseCheckTheInternet">读取课程时发生错误，请检查网络后重试</string>
    <string name="checkYourCourse">检查课程</string>
    <string name="course">课程</string>
    <string name="info">信息</string>
    <string name="className">课程名称</string>
    <string name="classSection">第%d节</string>
    <string name="weekCount">第%s周</string>
    <string name="teacher">授课教师</string>
    <string name="classWeeks">上课周</string>
    <string name="classLocation">上课地点</string>
    <string name="classTime">上课时间</string>
    <string name="import_finish">导入完成</string>
    <string name="import_course_to_calendar">将课程导入至日历中</string>
    <string name="oh_no_we_cant_access_your_calendar_app_exit">惊了，我们没有权限访问您的日历。程序即将退出</string>
    <string name="use_preset_account">为我创建单独的日历</string>
    <string name="choose_account_to_write">选择要写入的帐户</string>
    <string name="import_finish_last_sentence">现在你的课程已经保存在日历之中了</string>
    <string name="app_description">SimpleClass可以将课程直接导入你的手机日历</string>
    <string name="yes">好的</string>
    <string name="smile_face">(●\'◡\'●)</string>
    <string name="suitable_description">适配东北林业大学</string>
    <string name="delete_succeed">删除成功</string>
    <string name="undo">撤销</string>
    <string name="deleting">正在删除</string>
    <string name="action_finished">操作结束</string>
    <string name="delete_fail">删除失败</string>
    <string name="exception_during_running_cannot_access_calendar">执行时异常，无法访问日历</string>
    <string name="return_last_level">返回</string>
    <string name="succeed_delete_event">清除完成(%d)</string>
    <string name="delete_imported">清除已导入的日历</string>
    <string name="loading_section_list">正在拉取学期列表</string>
</resources>
